align w/ fixes branch. Dogh

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,7 +7,7 @@ header {
   --menu-accent-orange: #ffb800;
 
     background-color: var(--light-gray);
-    min-height: var(--header-height);
+    height: var(--header-height);
     
     nav {
       padding: 0.5rem 1rem;
